syntax = "proto3";

option go_package="github.com/SidharthSasikumar/train-ticket-grpc/ticket";

service TicketingService {
  rpc PurchaseTicket(PurchaseRequest) returns (PurchaseResponse);
  rpc GetReceipt(GetReceiptRequest) returns (GetReceiptResponse);
  rpc ViewUsers(ViewUsersRequest) returns (ViewUsersResponse);
  rpc RemoveUser(RemoveUserRequest) returns (RemoveUserResponse);
  rpc ModifySeat(ModifySeatRequest) returns (ModifySeatResponse);
}

message PurchaseRequest {
  string from = 1;
  string to = 2;
  User user = 3;
}

message PurchaseResponse {
  string message = 1;
  Receipt receipt = 2;
}

message GetReceiptRequest {
  string email = 1;
}

message GetReceiptResponse {
  Receipt receipt = 1;
}

message ViewUsersRequest {
  string section = 1;
}

message ViewUsersResponse {
  repeated UserSeat users = 1;
}

message RemoveUserRequest {
  string email = 1;
}

message RemoveUserResponse {
  string message = 1;
}

message ModifySeatRequest {
  string email = 1;
  string new_seat = 2;
}

message ModifySeatResponse {
  string message = 1;
}

message User {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
}

message Receipt {
  string from = 1;
  string to = 2;
  User user = 3;
  float price_paid = 4;
  string seat = 5;
}

message UserSeat {
  string email = 1;
  string seat = 2;
}

